# OpenGames

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Core/: Application.cpp  Application.h  CMakeLists.txt  Engine.cpp  Engine.h  EngineComponent.cpp  EngineComponent.h
Core/Entity/: AbstractEntity.h  Entity.cpp  Entity.h
Core/Game/: AbstractGameInstance.cpp  AbstractGameInstance.h  GameInstance.cpp  GameInstance.h
Core/Generators/: BooleanGenerator.cpp  BooleanGenerator.h  UUID.cpp  UUID.h  UuidGenerator.cpp  UuidGenerator.h
Core/Graphics/: RenderingHandler.cpp  RenderingHandler.h  TextureManager.cpp  TextureManager.h
Core/Scene/: Scene.cpp  Scene.h
Core/UI/: AbstractMenu.h
Games/: CMakeLists.txt
Games/Demo/: CMakeLists.txt
Games/Demo/Source/Entity/: Floppy.cpp  Floppy.h
Games/Demo/Source/Game/: ExampleGame.cpp  ExampleGame.h
Games/Demo/Source/Menu/: AboutMenu.cpp  AboutMenu.h  MainMenu.cpp  MainMenu.h
Games/SmashBounce/: CMakeLists.txt  README.md  main.cpp
Games/SmashBounce/Source/Constants/: ColorPicker.h  GameTags.h
Games/SmashBounce/Source/Entity/: Ball.cpp  Ball.h  BlockSimple.cpp  BlockSimple.h  Paddle.cpp  Paddle.h  PickupItem.cpp  PickupItem.h  PickupItemMarbles.cpp  PickupItemMarbles.h  Score.cpp  Score.h
Games/SmashBounce/Source/Game/: SmashBounce.cpp  SmashBounce.h  SmashBounceGame.cpp  SmashBounceGame.h
Games/SmashBounce/Source/Menu/: GameOverMenu.cpp  GameOverMenu.h
Games/SmashBounce/Source/Scene/: ArenaScene.cpp  ArenaScene.h
Games/SmashBounce/Source/Tags/: GameTags.h
Games/Template/: CMakeLists.txt  README.md  main.cpp
Games/Template/Source/Entity/: Floppy.cpp  Floppy.h
Games/Template/Source/Game/: ExampleGame.cpp  ExampleGame.h  SampleGame.cpp  SampleGame.h  TemplateGame.cpp  TemplateGame.h
Games/Template/Source/Menu/: AboutMenu.cpp  AboutMenu.h  MainMenu.cpp
